# rusty-binaries

./: .gitignore  Cargo.toml  config.toml
.cargo/: config.toml
src/: main.rs
